[tool.poetry]
name = "pddlstream"
version = "0.1.0"
description = ""
authors = ["Kenji Fukuda <fk.kenji.21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybullet = "^3.2.6"
numpy = "<2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
